# industrial-sim-capstone

./: .gitattributes  .gitignore  LICENSE  README.md  test_dodo.txt
docs/: architecture.md  requirements.md  team-tasks.md
scripts/: run-demo.sh  setup-dev.sh
src/amr_control/: README.md  package.xml  setup.py
src/amr_control/amr_control/: __init__.py  amr_controller.py  dynamic_obstacle_demo.py  navigation_policy.py
src/amr_control/config/: .gitkeep  factory_map.pgm  factory_map.yaml  factory_nav.rviz  generate_factory_map.py  nav2_params.yaml
src/amr_control/scripts/: .gitkeep
src/amr_control/test/: test_amr_controller.py
src/arm_control/: README.md  package.xml  setup.py
src/arm_control/arm_control/: __init__.py  arm_controller.py
src/arm_control/launch/: .gitkeep
src/arm_control/scripts/: .gitkeep
src/conveyor_control/: README.md  package.xml  setup.cfg  setup.py
src/conveyor_control/conveyor_control/: __init__.py  conveyor_node.py  random_spawner.py
src/conveyor_control/scripts/: .gitkeep
src/conveyor_control/test/: test_random_spawner.py
src/factory_description/: README.md  package.xml  setup.py
src/factory_description/launch/: demo.launch.py  factory_test.launch.py
src/factory_description/models/: .gitkeep
src/factory_description/test/: test_world_assets.py
src/factory_description/urdf/: .gitkeep
src/factory_manager/: README.md  package.xml  setup.cfg  setup.py
src/item_vision/: package.xml  setup.cfg  setup.py
src/item_vision/item_vision/: __init__.py  vision_node.py
src/item_vision/test/: test_color_segmentation.py
(+12 files in other folders)
