<?xml version="1.0"?>
<package format="3">
  <name>item_vision</name>
  <version>0.1.0</version>
  <description>RGB-D color and shape perception for factory items.</description>
  <maintainer email="hye11@example.com">hye11</maintainer>
  <license>Apache License 2.0</license>

  <depend>cv_bridge</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>vision_msgs</depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
